fix(python): legacy tasks did not handle correctly output files (#285)
* fix(python): legacy tasks did not handle correctly output files

* tests(): make tests run

* fix(): handle outputFiles

---------

Co-authored-by: Malaydewangan09 <malaydewangan310@gmail.com>